[package]
name = "dfile"
version = "0.2.0"
authors = ["Danny Kavanagh <dankava13@gmail.com>"]
description = "A program to easily collect and maintain your dotfiles, with git integration."
license = "MIT/Apache-2.0"
repository = "https://github.com/danno131313/dfile-rs"
readme = "README.md"
keywords = ["dotfiles", "dot", "files", "file", "git"]
categories = ["command-line-utilities", "development-tools", "config"]

[dependencies]
structopt = "0.2.5"
git2 = "0.7.1"
time = "0.1.39"
glob = "0.2.11"
